// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px",
      "height": "55px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      fontSize="small"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this view"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      title="select tracks"
      type="button"
      value="track_select"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          line_style
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
     
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "32px",
        "width": "700px",
      }
    }
  />
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-foo",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this track"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <div
      className="TrackControls-trackName-24"
    >
      foo
    </div>
    <div
      className="TrackControls-trackDescription-25"
    >
      
    </div>
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-foo",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-foo",
      }
    }
  />
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px",
      "height": "78px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      fontSize="small"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this view"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      title="select tracks"
      type="button"
      value="track_select"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          line_style
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
     
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "32px",
        "width": "700px",
      }
    }
  >
    <div
      className="block left-side right-side"
      style={
        Object {
          "left": "0px",
          "width": "100px",
        }
      }
    >
      <svg
        height={32}
        width={100}
      >
        <line
          className="tick major"
          data-bp={0}
          stroke="#555"
          strokeWidth={1}
          x1={0}
          x2={0}
          y1={0}
          y2={6}
        />
        <line
          className="tick minor"
          data-bp={20}
          stroke="#999"
          strokeWidth={1}
          x1={20}
          x2={20}
          y1={0}
          y2={4}
        />
        <line
          className="tick minor"
          data-bp={40}
          stroke="#999"
          strokeWidth={1}
          x1={40}
          x2={40}
          y1={0}
          y2={4}
        />
        <line
          className="tick minor"
          data-bp={60}
          stroke="#999"
          strokeWidth={1}
          x1={60}
          x2={60}
          y1={0}
          y2={4}
        />
        <line
          className="tick minor"
          data-bp={80}
          stroke="#999"
          strokeWidth={1}
          x1={80}
          x2={80}
          y1={0}
          y2={4}
        />
        <line
          className="tick major"
          data-bp={100}
          stroke="#555"
          strokeWidth={1}
          x1={100}
          x2={100}
          y1={0}
          y2={6}
        />
        <text
          alignmentBaseline="hanging"
          className="label first"
          style={
            Object {
              "fontSize": "11px",
            }
          }
          x={-3}
          y={7}
        >
          0
        </text>
        <text
          alignmentBaseline="hanging"
          className="label"
          style={
            Object {
              "fontSize": "11px",
            }
          }
          x={97}
          y={7}
        >
          100
        </text>
        <rect
          height="17"
          style={
            Object {
              "fill": "white",
            }
          }
          width={36}
          x={0}
          y={2}
        />
        <text
          alignmentBaseline="hanging"
          className="label refseq"
          style={
            Object {
              "fontSize": "16px",
              "fontWeight": "bold",
            }
          }
          x={0}
          y={2}
        >
          ctgA
        </text>
      </svg>
    </div>
    <div
      className="refLabel floating"
    >
      ctgA
    </div>
  </div>
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-foo",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this track"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <div
      className="TrackControls-trackName-24"
    >
      foo
    </div>
    <div
      className="TrackControls-trackDescription-25"
    >
      
    </div>
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-foo",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-foo",
      }
    }
  />
  <div
    className="controls track-controls"
    style={
      Object {
        "gridColumn": "controls",
        "gridRow": "track-bar",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this track"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <div
      className="TrackControls-trackName-24"
    >
      bar
    </div>
    <div
      className="TrackControls-trackDescription-25"
    >
      
    </div>
  </div>
  <div
    className="TrackRenderingContainer"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onWheel={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "track-bar",
        "width": "700px",
      }
    }
  >
    <div
      className="TrackRenderingNotImplemented"
    >
      Rendering not implemented for 
      tester
       tracks
    </div>
  </div>
  <div
    className="drag-handle drag-handle-horizontal"
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    style={
      Object {
        "gridColumn": "span 2",
        "gridRow": "resize-bar",
      }
    }
  />
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  className="LinearGenomeView"
  style={
    Object {
      "display": "grid",
      "gridTemplateColumns": "[controls] 100px [blocks] auto",
      "gridTemplateRows": "[scale-bar] auto ",
      "height": "32px",
      "width": "800px",
    }
  }
>
  <div
    className="controls view-controls"
    style={
      Object {
        "gridRow": "scale-bar",
      }
    }
  >
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      fontSize="small"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="small"
      style={
        Object {
          "minWidth": 0,
        }
      }
      tabIndex="0"
      title="configure this view"
      type="button"
      value="configure"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          settings
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
    <button
      className="MuiButtonBase-root-5 MuiToggleButton-root-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      title="select tracks"
      type="button"
      value="track_select"
    >
      <span
        className="MuiToggleButton-label-4"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-8 MuiIcon-fontSizeSmall-15"
        >
          line_style
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-17"
      />
    </button>
     
  </div>
  <div
    className="ScaleBar"
    style={
      Object {
        "gridColumn": "blocks",
        "gridRow": "scale-bar",
        "height": "32px",
        "width": "700px",
      }
    }
  />
</div>
`;
